--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.19",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-mdx-remote": "^5.0.0",
     "react": "19.2.3",
