--- a/package.json
+++ b/package.json
@@ -10,17 +10,25 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.19",
+    "axios": "^1.3.4",
+    "i18next": "^25.1.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-mdx-remote": "^5.0.0",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-i18next": "^15.5.1",
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.6.1",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
