--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "hust-media-next",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
-    "dev": "next dev -p 3001",
-    "build": "next build",
+    "dev": "next dev --webpack -p 3001",
+    "build": "next build --webpack",
     "start": "next start -p 3001",
     "lint": "eslint"
   },
@@ -16,8 +19,8 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-mdx-remote": "^5.0.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-i18next": "^15.5.1",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
@@ -27,8 +30,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
