--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "next dev --webpack -p 3001",
     "build": "next build --webpack",
-    "start": "next dev --webpack -p 3001",
+    "start": "nodemon --watch app --watch src --watch public --ext js,jsx,ts,tsx,css,mdx --exec \"NEXT_PUBLIC_HIDE_DEV_INDICATOR=1 next dev --webpack -p 3001\"",
+    "start:prod": "next start -p 3001",
     "lint": "eslint"
   },
   "dependencies": {
@@ -34,6 +35,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "nodemon": "^3.1.4",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
