--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "next-mdx-remote": "^5.0.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^15.5.1",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
+    "react-spinners": "^0.17.0",
     "redux": "^4.2.1",
     "sass": "^1.78.0"
   },
@@ -34,6 +36,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-helmet": "^6.1.11",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "nodemon": "^3.1.4",
