--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^15.5.1",
     "react-icons": "^4.8.0",
+    "react-modal": "^3.16.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-spinners": "^0.17.0",
     "redux": "^4.2.1",
-    "sass": "^1.78.0"
+    "sass": "^1.78.0",
+    "sweetalert2": "^11.26.18"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
